fix(Virtualized): fix display on IE on the display large

--- a/packages/components/src/VirtualizedList/RowLarge/RowLarge.scss
+++ b/packages/components/src/VirtualizedList/RowLarge/RowLarge.scss
@@ -33,6 +33,7 @@ $tc-list-large-field-value-color: $dove-gray !default;
 		column-count: 3;
 		flex-grow: 1;
 		padding: 0 $padding-large;
+		min-height: 0;
 
 		> li {
 			list-style: none;
